# private-dao-ark

./: .gitignore  ARCHITECTURE.md  BLOG_POST.md  Cargo.toml  DEPLOYMENT_GUIDE.md  ISSUES_AND_TODOS.md  PRIVATE_DAO.md  README.md  TEST_RESULTS.md  build.sh  encrypt_test_vote.py  test_ecies.sh  test_example.sh  test_full_cycle.sh
dao-contract/: Cargo.toml  build.sh
dao-contract/src/: lib.rs  types.rs
dao-frontend/: .env.example  craco.config.js  package-lock.json  package.json
dao-frontend/src/: App.css  App.tsx  types.ts
dao-frontend/src/components/: CreateProposal.tsx  JoinDAO.tsx  ProposalList.tsx  VoteOnProposal.tsx  VoteProofs.tsx
src/: crypto.rs  main.rs  tally.rs
